--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,20 @@
 /* css */
+
+
+h1{
+    position: absolute;
+    top: 50%;
+    left: 40%;
+}
+
+.invs{
+    color: black;
+    border-color: white;
+    width: 50px;
+    height: 30px;
+    position: absolute;
+    left: 80%;
+    top: 30%;
+    cursor: pointer;
+
+}
