--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,3 +39,29 @@ h1{
     top: 40%;
     left: 20%;
 }
+
+
+@keyframes floatUpDown {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+}
+
+.news.floating-animation {
+    animation: floatUpDown 2s ease-in-out infinite;
+}
+
+
+.cookie-consent {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
